fix projects section on mobile

--- a/client/styles/grid.module.css
+++ b/client/styles/grid.module.css
@@ -16,3 +16,9 @@
     grid-template-columns: repeat(2, minmax(0, 1fr)); /* keeps grid items equal width */
   }
 }
+
+@media (max-width: 425px) {
+  .singleCol {
+    grid-template-columns: repeat(1, minmax(0, 1fr)) !important; /* keeps grid items equal width */
+  }
+}
